[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/entity/entity.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
flags_unshaded = true
params_depth_draw_mode = 3
params_billboard_mode = 1

[node name="entity" type="Spatial"]
script = ExtResource( 1 )

[node name="timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="tween" type="Tween" parent="."]

[node name="sprite_3d" type="Sprite3D" parent="."]
material_override = SubResource( 1 )
pixel_size = 0.0313
texture = ExtResource( 2 )
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
[connection signal="tween_completed" from="tween" to="." method="_on_tween_tween_completed"]
